# latent-diffusion-inpainting

./: .gitignore  Makefile  README.md  combine.ipynb  inference_autoencoder.ipynb  inference_latent_diffusion_model.ipynb  main.py  poetry.toml  pyproject.toml
ldm/ldm/data/: PIL_data.py
ldm/ldm/models/: autoencoder.py
ldm/ldm/models/diffusion/: ddpm.py
ldm/models/first_stage_models/vq-f4-noattn/: config.yaml
ldm/models/ldm/inpainting_big/: config.yaml
