[tool.poetry]
name = "latent-diffusion-inpainting"
version = "0.1.0"
description = ""
authors = ["gireg.roussel <gireg.roussel@octo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.1"
omegaconf = "^2.3.0"
pillow = "^10.4.0"
tqdm = "^4.66.4"
numpy = "^2.0.1"
torch = "^2.4.0"
einops = "^0.8.0"
matplotlib = "^3.9.1"
torchvision = "^0.19.0"
pytorch-lightning = "^2.3.3"
clip = {git = "https://github.com/openai/CLIP.git"}
taming-transformers = {path = "taming-transformers"}


[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
nbqa = "^1.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
